# bagel

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml  python-checks.yaml  python-modal-tests.yaml  version-bump.yaml
docs/: conf.py  config-schema-v1.md  development.md  index.rst
scripts/binders/: dimer_binder.py  protenix_binder.py  simple_binder.py
scripts/binders/selective/: selective_binder.py
scripts/car/: README.md  bgl_sol_cd20_dimer.py  lnk_cd20_monomer.py
scripts/compute_metrics_from_pae/: run.sh
scripts/compute_per_res_min_pae/: main.py  state_A_27_pae.npy
scripts/gc_enzymes/: test.py
scripts/generate_enzymes/: enzymes.py
scripts/hallucination/: annealing.py  tempering.py
scripts/mimic_enzymes/: mimic_via_embeddings.py
scripts/mimic_protein/: mimic.py  mimic_via_embeddings_1.py  mimic_via_embeddings_2.py
scripts/mini-enzymes/: README.md  petase.py  protease.py  taq.py  utils.py  vioA.py
scripts/scaffolds/: annealing.py
scripts/technical-report/: mimic_oxidoreductase.py  selective_zinc_finger.py
scripts/technical-report/binders/: ca4.py  derf7.py  egfr.py
scripts/technical-report/disordered/: asyn.py  cd28.py  p53.py  sumo1.py
src/bagel/: __init__.py  callbacks.py  chain.py  cli.py  constants.py  energies.py  minimizer.py  mutation.py  oracles.py  protein_LM.py  state.py  system.py  tools.py  utils.py
src/bagel/analysis/: analyzer.py
src/bagel/config/: __init__.py  aliases.py  compiler.py  exporter.py  imports.py  loader.py  schema_v1.py  selectors.py
src/bricklane/: __init__.py  chain.py  constants.py  energies.py  minimizer.py  mutation.py  state.py  system.py
src/desprot/: __init__.py  _schema.py  constants.py  minimizer.py  state.py  system.py
tests/: conftest.py
tests/integration_tests/: desprot.pbs  test_annealing.py  test_folding_oracles.py  test_grandcanonical.py  test_pLM_sampling.py  test_tempering.py
tests/unit_tests/: test_agreed_example_config.py  test_analyzer.py  test_callbacks.py  test_chain.py  test_cli_config.py  test_config_compiler.py  test_config_loader.py  test_energies.py  test_folding.py  test_folding_oracle_wrappers.py  test_folding_utils.py  test_minimizer.py  test_mutation.py  test_oracles.py  test_reorder_atoms.py  test_runtime_export.py  test_selectors.py  test_state.py  test_system.py  test_utils.py
(+29 files in other folders)
