[project]
name = "bagel"
version = "0.1.0"
authors = [
  {name = "Jakub Lála", email = "jakublala@gmail.com"},
  {name = "Ayham Al-Saffar", email = "ayham.saffar@gmail.com"},
  {name = "Stefano Angioletti-Uberti", email = "sangiole@imperial.ac.uk"},
]
description = "Protein Engineering through Optimization"
readme = "README.md"
license = "MIT"
license_files = "LICENSE"
keywords = ["protein", "protein design", "optimisation", "drug", "binder"]

requires-python = ">=3.12"
dependencies = [
    "biotite>=1.0.1",
    "boileroom==0.0.15",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.1",
    "pre-commit>=3.6.0",
]
local = [
    "transformers @ git+https://github.com/jakublala/my_transformers.git"
]

[project.urls]
Documentation = "coming soon"
Repository = "https://github.com/softnanolab/bagel.git"
Issues = "https://github.com/softnanolab/bagel/issues"

[tool.mypy]
strict = true
show_traceback = true
plugins = "numpy.typing.mypy_plugin"
files = ["**/src/bagel/*.py"] #selects files checked during mypy call, but does not affect the editor's MyPy linter
explicit_package_bases = true #allows giving directories different mypy settings

[[tool.mypy.overrides]]
module = ["biotite.*", "pytest.*", "pandas.*", "bagel.*"] #libraries that dont have type stubs
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"] #tells editor's mypy linter to ignore these modules
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--numprocesses auto"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "**/src/bagel/*.py", "**/tests/*.py"]
fix = true

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["F403"] #allows wildcard import of pytest fixtures in test files

[tool.ruff.lint]
select = [
  "W", # automatically removes trailing whitespace, removes extra empty lines at end of files...
]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bagel"]

[tool.hatch.metadata]
allow-direct-references = true
